--- a/environment.yml
+++ b/environment.yml
@@ -1,20 +1,16 @@
-name: cfltxm_tectoolkit
+name: tectoolkit
 dependencies:
-- libgfortran=3.0.0=1
-- mkl=11.3.3=0
-- numpy=1.11.1=py35_0
-- openssl=1.0.2h=1
-- pip=8.1.2=py35_0
-- python=3.5.2=0
-- readline=6.2=2
-- scikit-learn=0.17.1=np111py35_2
-- scipy=0.18.0=np111py35_0
-- setuptools=25.1.6=py35_0
-- sqlite=3.13.0=0
-- tk=8.5.18=0
-- wheel=0.29.0=py35_0
-- xz=5.2.2=0
-- zlib=1.2.8=3
+- numpy>=1.11.1
+- pip>=8.1.2
+- python>=3.5.2
+- readline>=6.2
+- scikit-learn>=0.17.1
+- scipy>=0.18.0
+- setuptools>=25.1.6
+- sqlite>=3.13.0
+- wheel>=0.29.0
+- xz>=5.2.2
+- zlib>=1.2.8
 - pip:
-  - pysam==0.9.1.4
+  - pysam>=0.9.1.4
 
