--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ install:
   - conda config --set always_yes yes --set changeps1 no
   - conda env create -f environment.yml -n test-environment
   - source activate test-environment
-script: pytest
+script: py.test
