--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ install:
   - conda config --set always_yes yes --set changeps1 no
   - conda env create -f environment.yml -n test-environment
   - source activate test-environment
-script:
   - python setup.py sdist
   - pip install dist/tefingerprint-*.tar.gz
-  - python -m pytest -vv ./
+script: python -m pytest -vv ./
