--- a/environment.yml
+++ b/environment.yml
@@ -1,16 +1,9 @@
 name: tefingerprint
 dependencies:
-- biopython>=1.6
-- numpy>=1.11.1
-- pip>=8.1.2
-- python>=3.5.2
-- readline>=6.2
-- setuptools>=25.1.6
-- sqlite>=3.13.0
-- wheel>=0.29.0
-- xz>=5.2.2
-- zlib>=1.2.8
+- biopython>=1.65
+- numpy>=1.10.0
+- python>=3.4.0
 - pip:
-  - pysam>=0.9.1.4
-  - pytest>=3.0.0
+  - pysam>=0.9.0
+  - pytest
   - pytest-cov
